--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@ body {
   padding: 3em;
 }
 .blockTxt{
+  font-family: 'Open Sans', sans-serif;
+
   text-align: center;
+  margin-top:18em;
 }
 .construction:after {
   background-color: #fdd400; /* colour of the sign */
