--- a/style.css
+++ b/style.css
@@ -3,10 +3,8 @@ body {
 }
 .blockTxt{
   font-family: 'Open Sans', sans-serif;
-
   text-align: center;
-  margin-top:18em;
 }
 .construction{
-
+  text-align: center;
 }
